[package]
name = "sensor-net-middleware-rs"
version = "2.0.1"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2021"
description = "middleware for the SensorNet project"
readme = "README.md"
repository = "https://github.com/hannes-hochreiner/sensor-net-middleware-rs"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
futures = "0.3.5"
tokio = { version = "1.21", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
env_logger = "0.9"
log = "0.4"
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio-native-tls = "0.3"
anyhow = "1.0"
# dnf install perl
openssl = { version = "0.10", features = ["vendored"] }
